Save configurations from subfolderPanel